updated signature and styles

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <button id="btn-stop">Stop</button>
         <button id="btn-reset">Reset</button>
     </div>
-
-
-
+    <div class="footer">
+        <p>This game is made with <i class="fas fa-heart"></i> by <span><a href="https://chinyro.dev">Chiny Ro</a></span></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
