--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Stopwatch</h1>
         <img src="img/undraw_time_management_re_tk5w.svg" />
-        <p><span id="seconds">00</span>:<span id="tens">00</span></p>
+        <p><span id="seconds">00</span><span id="divider">:</span><span id="tens">00</span></p>
         <button id="btn-start">Start</button>
         <button id="btn-stop">Stop</button>
         <button id="btn-reset">Reset</button>
