--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="btn-reset">Reset</button>
     </div>
     <div class="footer">
-        <p>This game is made with <i class="fas fa-heart"></i> by <span><a href="https://chinyro.dev">Chiny Ro</a></span></p>
+        <p>This was made with <i class="fas fa-heart"></i> by <span><a href="https://chinyro.dev">Chiny Ro</a></span></p>
     </div>
     <script src="script.js"></script>
 </body>
